syntax = "proto3";

package documents.v1;

option go_package = "github.com/Oloruntobi1/bookgrpc/documents.v1;documents_v1";

import "google/api/annotations.proto";

// Documents Service
service Documents {
  // GetDocuments
  rpc GetDocuments(EmptyReq) returns (stream GetDocumentsRes) {
    option (google.api.http) = {
      post: "/v1/docs/getdocuments"
      body: "*"
    };
  };
}

// EmptyReq message
message EmptyReq {}

// GetDocumentsRes message
message GetDocumentsRes {
  // Document message
  Document document = 1;
}

// Document message
message Document {
  // The document name
  string name = 1;
  // The document type
  string document_type = 2;
  // The document size
  int64 size = 3;
}

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative --grpc-gateway_out . --grpc-gateway_opt paths=source_relative documents.proto